--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Histoy of JavaScript</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <style>
             h1{
                 color: red;
@@ -24,6 +25,19 @@
         </style>
     </head>
     <body>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+              <li class="page-item">
+                <a class="page-link" href="#">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
+              <li class="page-item"><a class="page-link" href="jsassignment.html">Day2</a></li>
+              <li class="page-item"><a class="page-link" href="aboutme.html">Day3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="jsassignment.html">Next</a>
+              </li>
+            </ul>
+        </nav>
         <center><h1>HISTORY OF JAVASCRIPT</h1></center>
         <p>
             <b><h2>
@@ -197,6 +211,7 @@
             </h3>
         </ol>
         <br>
-        <center><button><a href="jsassignment.html">NEXT</a></button></center>
+        <!-- <center><button><a href="jsassignment.html">NEXT</a></button></center> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
