--- a/jsassignment.html
+++ b/jsassignment.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Similarities & Differences between var, let, const</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <style>
             i{
                 color: red;
@@ -28,6 +29,19 @@
         </style>
     </head>
     <body>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+              <li class="page-item">
+                <a class="page-link" href="index.html">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
+              <li class="page-item"><a class="page-link" href="jsassignment.html">Day2</a></li>
+              <li class="page-item"><a class="page-link" href="aboutme.html">Day3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="aboutme.html">Next</a>
+              </li>
+            </ul>
+        </nav>
         <h1><center>SIMILARITIES AND DIFFERENCES BETWEEN LET, VAR, CONST</center></h1>
         <p>
             <b>
@@ -78,7 +92,7 @@
                             <ul>
                                 <li><i>let and const </i>: Not enumerable</li>
                                 <li><i>var </i>: Enumerable</li>
-                            </ul>
+                          </ul>
                         </li>
                         <li>USE CASES 
                             <ul>
@@ -104,6 +118,7 @@
                 </h3>
             </b>
         </p>
-        <center><button><a href="index.html">Previous</a></button></center>
+        <!-- <center><button><a href="index.html">Previous</a></button></center> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
