--- a/aboutme.html
+++ b/aboutme.html
@@ -73,15 +73,7 @@
                 religion: 'Christian'
             }    
 
-            alert(`
-                My name is ${self.surname} ${self.firstname} ${self.lastname}. I am a 
-                ${self.gender}. I am ${self.age} years of age. I am from ${self.origin} but i live in 
-                ${self.address} ${self.State}. I am an ${self.profession} who supports 
-                ${self.team}.
-                My favourite food is ${self.food}. My favourite colour 
-                is also ${self.color}. I am a ${self.religion} who goes to church 
-                regularly. 
-            `)
+            alert(`My name is ${self.surname} ${self.firstname} ${self.lastname}. I am a ${self.gender}. I am ${self.age} years of age. I am from ${self.origin} but i live in ${self.address} ${self.State}. I am an ${self.profession} who supports  ${self.team}.My favourite food is ${self.food}. My favourite colour is also ${self.color}. I am a ${self.religion} who goes to church regularly.`)
 
 
 
