--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,11 @@
                 <a class="page-link" href="jsassignment.html">Previous</a>
               </li>
               <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
-              <li class="page-item"><a class="page-link" href="jsassignment.html">Day2</a></li>
+              <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
+              <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
+
               <li class="page-item">
-                <a class="page-link" href="#">Next</a>
+                <a class="page-link" href="comp.html">Next</a>
               </li>
             </ul>
         </nav>
