--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
               <li class="page-item">
                 <a class="page-link" href="#">Previous</a>
               </li>
-              <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
-              <li class="page-item"><a class="page-link" href="jsassignment.html">Day2</a></li>
-              <li class="page-item"><a class="page-link" href="aboutme.html">Day3</a></li>
+              <li class="page.item">
+                <a class="page-link" href="#">Day1</a>
+                
+                </li>
+              <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
+              <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
               <li class="page-item">
                 <a class="page-link" href="jsassignment.html">Next</a>
               </li>
@@ -211,7 +214,7 @@
             </h3>
         </ol>
         <br>
-        <!-- <center><button><a href="jsassignment.html">NEXT</a></button></center> -->
+        <center><button><a href="jsassignment.html">NEXT</a></button></center>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
