--- a/jsassignment.html
+++ b/jsassignment.html
@@ -35,8 +35,8 @@
                 <a class="page-link" href="index.html">Previous</a>
               </li>
               <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
-              <li class="page-item"><a class="page-link" href="jsassignment.html">Day2</a></li>
-              <li class="page-item"><a class="page-link" href="aboutme.html">Day3</a></li>
+              <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
+              <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
               <li class="page-item">
                 <a class="page-link" href="aboutme.html">Next</a>
               </li>
@@ -118,7 +118,7 @@
                 </h3>
             </b>
         </p>
-        <!-- <center><button><a href="index.html">Previous</a></button></center> -->
+        <center><button><a href="index.html">Previous</a></button></center>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
