--- a/aboutme.html
+++ b/aboutme.html
@@ -10,12 +10,11 @@
     <body>
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
-              <li class="page-item">
-                <a class="page-link" href="jsassignment.html">Previous</a>
-              </li>
-              <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
-              <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
+                <li class="page-item"><a class="page-link" href="jsassignment.html">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
+                <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
               <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
+              <li class="page-item"><a class="page-link" href="retirementcalc.html">Day4</a></li>
 
               <li class="page-item">
                 <a class="page-link" href="comp.html">Next</a>
