--- a/comp.html
+++ b/comp.html
@@ -20,9 +20,9 @@
               <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
               <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
               <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
-
+              <li class="page-item"><a class="page-link" href="retirementcalc.html">Day4</a></li>
               <li class="page-item">
-                <a class="page-link" href="#">Next</a>
+                <a class="page-link" href="retirementcalc.html">Next</a>
               </li>
             </ul>
         </nav>
