--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </li>
               <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
               <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
+              <li class="page-item"><a class="page-link" href="retirementcalc.html">Day4</a></li>
               <li class="page-item">
                 <a class="page-link" href="jsassignment.html">Next</a>
               </li>
