--- a/jsassignment.html
+++ b/jsassignment.html
@@ -37,6 +37,7 @@
               <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
               <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
               <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
+              <li class="page-item"><a class="page-link" href="retirementcalc.html">Day4</a></li>
               <li class="page-item">
                 <a class="page-link" href="aboutme.html">Next</a>
               </li>
