--- a/comp.html
+++ b/comp.html
@@ -20,11 +20,16 @@
               <li class="page-item"><a class="page-link" href="index.html">Day1</a></li>
               <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
               <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
-              <li class="page-item"><a class="page-link" href="retirementcalc.html">Day4</a></li>
-              <li class="page-item">
-                <a class="page-link" href="retirementcalc.html">Next</a>
-              </li>
-            </ul>
+              <div class="pagination">
+                <button class="page-item dropdown-toggle btn btn-light" data-bs-toggle="dropdown">
+                  Calculator
+                </button>
+                <ul class="dropdown-menu">
+                    <li class="page-item"><a class="page-link" href="retirementcalc.html">Retirement Calculator</a></li><br>
+                    <li class="page-item"><a class="page-link" href="simple.html">Simple Calculator</a></li>
+                  
+                </ul>
+              </div>
         </nav>
         <h1><center>
             DIFFERENCES BETWEEN COMPARISON OPERATOR AND LOGICAL OPERATORS
