--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
                 </li>
               <li class="page-item"><a class="page-link" href="aboutme.html">Day2</a></li>
               <li class="page-item"><a class="page-link" href="comp.html">Day3</a></li>
-              <li class="page-item"><a class="page-link" href="retirementcalc.html">Day4</a></li>
-              <li class="page-item">
-                <a class="page-link" href="jsassignment.html">Next</a>
-              </li>
+              <div class="pagination">
+                <button class="page-item dropdown-toggle btn btn-light" data-bs-toggle="dropdown">
+                  Calculator
+                </button>
+                <ul class="dropdown-menu">
+                    <li class="page-item"><a class="page-link" href="retirementcalc.html">Retirement Calculator</a></li><br>
+                    <li class="page-item"><a class="page-link" href="simple.html">Simple Calculator</a></li>
+                  
+                </ul>
+              </div>
             </ul>
         </nav>
         <center><h1>HISTORY OF JAVASCRIPT</h1></center>
